--- a/languages/objinspstrconsts.pl.po
+++ b/languages/objinspstrconsts.pl.po
@@ -1,13 +1,13 @@
 msgid ""
 msgstr ""
-"Last-Translator: Dominik Zablotny <dominz@wp.pl>\n"
-"PO-Revision-Date: 2004-02-06 02:26+0100\n"
+"Last-Translator: AlbercikCD\n"
+"PO-Revision-Date: 2006-03-10 16:49+0100\n"
 "Project-Id-Version: objinspstrconsts\n"
 "Language-Team: polski <pl@li.org>\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.3\n"
-"Plural-Forms:  nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: objinspstrconsts:oisdlinesdchars
 msgid "%d lines, %d chars"
@@ -119,7 +119,7 @@ msgstr ""
 
 #: objinspstrconsts:oisnone
 msgid "(none)"
-msgstr ""
+msgstr "(brak)"
 
 #: objinspstrconsts:ois0lines0chars
 msgid "0 lines, 0 chars"
@@ -139,7 +139,7 @@ msgstr ""
 
 #: objinspstrconsts:oicoleditadd
 msgid "Add"
-msgstr ""
+msgstr "Dodaj"
 
 #: objinspstrconsts:sccsiledtopendialog
 msgid "Add Images"
@@ -159,7 +159,7 @@ msgstr ""
 
 #: objinspstrconsts:sccsiledtadd
 msgid "Add..."
-msgstr ""
+msgstr "Dodaj..."
 
 #: objinspstrconsts:sccsiledtadjustment
 msgid "Adjustment"
@@ -171,7 +171,7 @@ msgstr "Wszystkie"
 
 #: objinspstrconsts:oisallfiles
 msgid "All files"
-msgstr ""
+msgstr "Wszystkie pliki"
 
 #: objinspstrconsts:sccstredtapply
 msgid "Apply"
@@ -415,7 +415,7 @@ msgstr ""
 
 #: objinspstrconsts:cactionlisteditorfilecategory
 msgid "File"
-msgstr ""
+msgstr "Plik"
 
 #: objinspstrconsts:oistdactdatasetfirsthint
 msgid "First"
@@ -639,7 +639,7 @@ msgstr ""
 
 #: objinspstrconsts:oispaste
 msgid "Paste"
-msgstr ""
+msgstr "Wklej"
 
 #: objinspstrconsts:clbdisable
 msgid "Popup to disable/enable items"
@@ -679,15 +679,15 @@ msgstr ""
 
 #: objinspstrconsts:sccstredtsave
 msgid "Save"
-msgstr ""
+msgstr "Zapisz"
 
 #: objinspstrconsts:oistdactfilesaveasheadline
 msgid "Save &As..."
-msgstr ""
+msgstr "Zapisz j&ako..."
 
 #: objinspstrconsts:oistdactfilesaveashint
 msgid "Save As"
-msgstr ""
+msgstr "Zapisz jako..."
 
 #: objinspstrconsts:sccsiledtsavedialog
 msgid "Save Image"
@@ -703,7 +703,7 @@ msgstr ""
 
 #: objinspstrconsts:sccsiledtsave
 msgid "Save..."
-msgstr ""
+msgstr "Zapisz..."
 
 #: objinspstrconsts:oistdacteditselectallheadline
 msgid "Select &All"
@@ -827,7 +827,7 @@ msgstr ""
 
 #: objinspstrconsts:oisundo
 msgid "Undo"
-msgstr ""
+msgstr "Cofnij"
 
 #: objinspstrconsts:oisunknown
 msgid "Unknown"
