--- a/languages/lazaruside.po
+++ b/languages/lazaruside.po
@@ -839,7 +839,11 @@ msgid "Convert Delphi unit to Lazarus unit"
 msgstr ""
 
 #: lazarusidestrconsts:lismenuconvertdelphiproject
-msgid "Convert Delphi Project to Lazarus Project"
+msgid "Convert Delphi project to Lazarus project"
+msgstr ""
+
+#: lazarusidestrconsts:lismenuconvertdelphipackage
+msgid "Convert Delphi package to Lazarus package"
 msgstr ""
 
 #: lazarusidestrconsts:lismenubuildlazarus
@@ -940,6 +944,10 @@ msgstr ""
 
 #: lazarusidestrconsts:lischoosedelphiproject
 msgid "Choose Delphi project (*.dpr)"
+msgstr ""
+
+#: lazarusidestrconsts:lischoosedelphipackage
+msgid "Choose Delphi package (*.dpk)"
 msgstr ""
 
 #: lazarusidestrconsts:lisdelphiproject
@@ -3379,7 +3387,7 @@ msgid "Show all messages"
 msgstr ""
 
 #: lazarusidestrconsts:dlgunitoutp
-msgid "Unit output directory (-FE):"
+msgid "Unit output directory (-FU):"
 msgstr ""
 
 #: lazarusidestrconsts:liscodefault
@@ -3695,7 +3703,7 @@ msgid "Down"
 msgstr ""
 
 #: lazarusidestrconsts:dlgreplaceall
-msgid "Replace All"
+msgid "Replace &All"
 msgstr ""
 
 #: lazarusidestrconsts:dlggetposition
@@ -4976,6 +4984,10 @@ msgstr ""
 
 #: lazarusidestrconsts:liskeycatdesigner
 msgid "Designer commands"
+msgstr ""
+
+#: lazarusidestrconsts:liskeycatobjinspector
+msgid "Object Inspector commands"
 msgstr ""
 
 #: lazarusidestrconsts:liskeycatcustom
