--- a/debian/changelog
+++ b/debian/changelog
@@ -26,5 +26,5 @@ lazarus (0.9.1beta-0) unstable; urgency=low
 
   * Initial Release.
 
- -- Pierre Gillmann <pierre@kiste-pierre>  Sun, 30 May 2004 18:17:14 +0200
+ -- Pierre Gillmann <pierre@kiste-pierre.invalid>  Sun, 30 May 2004 18:17:14 +0200
 
